Integrating everyone's work

--- a/UI/index.html
+++ b/UI/index.html
@@ -43,7 +43,7 @@
 							<!--<li><a href="more.html">More Information</a></li>-->
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/vmatalon/WeatherWeekendWarriors" class="icon fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
