Replaced skiing with indoor activity and added text to html

--- a/UI/index.html
+++ b/UI/index.html
@@ -53,9 +53,12 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>ADD EXPLANATION / INTRO TEXT!!!!!!</p>
+									<p>Welcome to Weather Weekend Warriors.</p>
+
+									<p>Tell us where you're going and when you'll be there. We'll recommend an outdoor activity that is ideal based on that location and the expected weather.</p>
+									<p>We use a decision tree that has been trained on our preferences for activities based on historical weather.<br>
+									The possible activities we included are: hunting, paragliding, skiing, camping, hiking, biking, boating, fishing.<br>
+									Enjoy your outdoor fun!</p>
 								</header>
 								<ul class="actions">
 									<li><a href="input.html" class="button big">Input Your Data</a></li>
